# EQLS-Causal-Project

./: .gitignore  analyze_differences_in_ate.py  confounders.ipynb  country_robustness.py  estimation copy.ipynb  estimation.ipynb  estimation_utils.py  lecturer_meeting.md  pyproject.toml  results_per_country.json  robustness.ipynb  structure_data.py
bootstraps/: current.csv
data/: ate_results.csv  ate_results_dowhy.csv  dictionary.json  eqls_processed.csv  results_per_country.json
figs/: countries_ate.tex
graphs/: full_causal.gpickle
src/: EDA.ipynb  ate_dowhy.py  ate_estimation.ipynb  ate_estimation.py  ate_methods.py  bayes-dag.ipynb  gbdt_utils.py  propensity_estimation.py
src/deprecated/: propensity_estimation.py
statistical_analysis/: pairwise_mean_differences.csv  pairwise_mean_differences.tex  per_method_means.csv  rm_anova_results.json  rm_anova_table.csv
