[project]
name = "eqls-causal-project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dowhy>=0.13",
    "drawio>=0.0.10",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "networkx>=3.4.2",
    "pip>=25.1.1",
    "pydot>=4.0.1",
    "pygraphviz>=1.14",
    "python-drawio>=0.1.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]
